--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Log file
 *.log
+*.logs
 
 # BlueJ files
 *.ctxt
@@ -11,13 +12,19 @@
 .mtj.tmp/
 
 # Package Files #
+.factorypath
 *.jar
 *.war
 *.nar
 *.ear
 *.zip
+*.gz
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.classpath
+.project
+.settings*
+target
+.idea
+/.idea
+*.iml
